force-app/main/default/objects/workflow__c/workflow__c.object-meta.xml
<CustomObject>
    <label>워크플로우</label>
    <nameField>
        <label>워크플로우 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>