force-app/main/default/objects/workflow__c/fields/LargeCode__c.field-meta.xml
<CustomField>
    <fullName>LargeCode__c</fullName>
    <label>대분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>본점</fullName>
            </value>
            <value>
                <fullName>판매처</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>