force-app/main/default/objects/workflow__c/fields/level__c.field-meta.xml
<CustomField>
    <fullName>level__c</fullName>
    <label>레벨</label>
    <length>255</length>
    <type>Text</type>
</CustomField>