force-app/main/default/objects/workflow__c/fields/MidCategory__c.field-meta.xml
<CustomField>
    <fullName>MidCategory__c</fullName>
    <label>중분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>고객(본점) 생성 프로세스</fullName>
            </value>
            <value>
                <fullName>고객(판매처) 생성 프로세스</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>