force-app/main/default/objects/workflow__c/fields/Page2getCategory__c.field-meta.xml
<CustomField>
    <fullName>Page2getCategory__c</fullName>
    <label>Page2getCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기본정보</fullName>
            </value>
            <value>
                <fullName>회계정보</fullName>
            </value>
            <value>
                <fullName>영업정보</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>