force-app/main/default/objects/workflow__c/fields/Page2LargeCode__c.field-meta.xml
<CustomField>
    <fullName>Page2LargeCode__c</fullName>
    <label>Page2LargeCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>관리처</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>