force-app/main/default/objects/workflow__c/fields/Page2MidCategory__c.field-meta.xml
<CustomField>
    <fullName>Page2MidCategory__c</fullName>
    <label>Page2MidCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>고객(관리처-배송) 생성 프로세스</fullName>
            </value>
            <value>
                <fullName>고객(관리처-분할) 생성 프로세스</fullName>
            </value>
            <value>
                <fullName>고객(관리처-2차) 생성 프로세스</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>