force-app/main/default/objects/workflow__c/fields/ProcessId__c.field-meta.xml
<CustomField>
    <fullName>ProcessId__c</fullName>
    <label>ProcessId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>