force-app/main/default/objects/workflow__c/fields/ProjectPage__c.field-meta.xml
<CustomField>
    <fullName>ProjectPage__c</fullName>
    <label>ProjectPage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Page1</fullName>
            </value>
            <value>
                <fullName>Page2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>