force-app/main/default/objects/workflow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessId__c</columns>
    <columns>level__c</columns>
    <columns>MidCategory__c</columns>
    <columns>getCategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>